# detective-h

./: .gitignore  CLAUDE.md  README.md
cli/: README.md  pyproject.toml  setup.py  test_detective_core.py
cli/virus_tracker/: __init__.py  __main__.py  blake2b_wrapper.py  blake3_wrapper.py  detective_core_wrapper.py  virus_analyzer.py  virus_comparator.py
core/blake_hash/: CMakeLists.txt
core/blake_hash/include/: blake3.h  detective_core.h  hash.h
core/blake_hash/src/: detective_core.c  hash.c
core/blake_hash/src/internal/: blake3.c
core/clang_module/: CMakeLists.txt
core/clang_module/include/: blake2b.h  hash.h
core/clang_module/src/: hash.c
core/clang_module/src/internal/: blake2b.c
python/: setup.py
python/virus_tracker/: __main__.py
